--- a/contact.html
+++ b/contact.html
@@ -2,33 +2,29 @@
 <html lang="fr">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-B4W3T3BFSS"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'G-B4W3T3BFSS');
+    </script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Blog lifestyle">
+    <meta name="description" content="Site et application qui t'aide à prendre soin de tes plantes peu importe leur type !">
     <meta name="author" content="Clémence Thierry">
-    <!--        (
-                 )     (
-              ___...(-------)-....___
-          .-""       )    (          ""-.
-     .-'``'|-._             )         _.-|
-    /  .--.|   `""---...........---""`   |
-   /  /    |                             |
-   |  |    |                             |
-    \  \   |                             |
-     `\ `\ |                             |
-       `\ `|                             |
-       _/ /\                             /
-      (__/  \                           /
-   _..---""` \                         /`""---.._
-.-'           \                       /          '-.
-:               `-.__             __.-'              :
-:                  ) ""---...---"" (                 :
-'._               `"--...___...--"`              _.'
-   \""--..__                              __..--""/
-    '._     """----.....______.....----"""     _.'
-      `""--..,,_____            _____,,..--""`
-                     `"""----"""` -->
+    <meta property="og:url" content="etu-cnm.uqat.ca/contact" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Green Attitude - Contact" />
+    <meta property="og:description" content="Une interrogation ? Contacte-nous ! Ou pas" />
+    <meta property="og:image" content="https://etu-cnm.uqat.ca/20231-art1211/thic32/tp3/images/logo-GreenAttitude-grand.jpeg" />
+    <meta property="og:image:alt" content="logo Green Attitude" />
     <title>Green Attitude - Contact</title>
     <link rel="icon" href="" />
     <link rel="stylesheet" href="css/style.css">
@@ -39,14 +35,13 @@
 </head>
 
 <body>
-
     <nav>
         <img class="logo" src="images/logo-GreenAttitude.png" alt="Logo Green Attitude" />
-        <img class="open open-close" src="images/icons8-menu.svg" />
-        <img class="close open-close hide" src="images/icons8-effacer.svg" />
+        <img class="ouvrir ouvrir-fermer" src="images/icone-menu.svg" />
+        <img class="fermer ouvrir-fermer cache" src="images/icone-fermer.svg" />
         <ul class="menu">
             <li><a href="index.html">Accueil</a></li>
-            <li><a href="plantes.html">Types de plantes</a></li>
+            <li><a href="plantes.html">Plantes</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><button class="btn">Inscription</button></li>
@@ -68,7 +63,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Accueil</a></li>
-                <li><a href="plantes.html">Types de plantes</a></li>
+                <li><a href="plantes.html">Plantes</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
